test/langtools/tools/javac/patterns/PrimitivePatternsSwitchErrors.out
PrimitivePatternsSwitchErrors.java:206:9: compiler.err.already.defined: kindname.method, booleanSingleCase(boolean), kindname.class, PrimitivePatternsSwitchErrors
PrimitivePatternsSwitchErrors.java:14:18: compiler.err.pattern.dominated
PrimitivePatternsSwitchErrors.java:23:18: compiler.err.pattern.dominated
PrimitivePatternsSwitchErrors.java:30:24: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: int, java.lang.Long)
PrimitivePatternsSwitchErrors.java:61:18: compiler.err.pattern.dominated
PrimitivePatternsSwitchErrors.java:69:18: compiler.err.pattern.dominated
PrimitivePatternsSwitchErrors.java:77:18: compiler.err.pattern.dominated
PrimitivePatternsSwitchErrors.java:83:18: compiler.err.prob.found.req: (compiler.misc.possible.loss.of.precision: long, byte)
PrimitivePatternsSwitchErrors.java:89:18: compiler.err.constant.label.not.compatible: int, float
PrimitivePatternsSwitchErrors.java:91:18: compiler.err.constant.label.not.compatible: int, float
PrimitivePatternsSwitchErrors.java:102:13: compiler.err.duplicate.case.label
PrimitivePatternsSwitchErrors.java:113:13: compiler.err.unconditional.pattern.and.default
PrimitivePatternsSwitchErrors.java:121:13: compiler.err.unconditional.pattern.and.default
PrimitivePatternsSwitchErrors.java:129:18: compiler.err.unconditional.pattern.and.default
PrimitivePatternsSwitchErrors.java:142:18: compiler.err.constant.label.not.compatible: long, float
PrimitivePatternsSwitchErrors.java:144:18: compiler.err.prob.found.req: (compiler.misc.possible.loss.of.precision: double, float)
PrimitivePatternsSwitchErrors.java:150:18: compiler.err.prob.found.req: (compiler.misc.possible.loss.of.precision: float, long)
PrimitivePatternsSwitchErrors.java:151:18: compiler.err.prob.found.req: (compiler.misc.possible.loss.of.precision: double, long)
PrimitivePatternsSwitchErrors.java:156:18: compiler.err.constant.label.not.compatible: long, double
PrimitivePatternsSwitchErrors.java:157:18: compiler.err.constant.label.not.compatible: float, double
PrimitivePatternsSwitchErrors.java:163:18: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: long, java.lang.Float)
PrimitivePatternsSwitchErrors.java:165:18: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: double, java.lang.Float)
PrimitivePatternsSwitchErrors.java:171:18: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: float, java.lang.Long)
PrimitivePatternsSwitchErrors.java:172:18: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: double, java.lang.Long)
PrimitivePatternsSwitchErrors.java:177:18: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: long, java.lang.Double)
PrimitivePatternsSwitchErrors.java:178:18: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: float, java.lang.Double)
PrimitivePatternsSwitchErrors.java:189:18: compiler.err.unconditional.pattern.and.default
PrimitivePatternsSwitchErrors.java:196:18: compiler.err.duplicate.unconditional.pattern
PrimitivePatternsSwitchErrors.java:29:16: compiler.err.not.exhaustive
PrimitivePatternsSwitchErrors.java:36:16: compiler.err.not.exhaustive
PrimitivePatternsSwitchErrors.java:43:16: compiler.err.not.exhaustive
PrimitivePatternsSwitchErrors.java:51:16: compiler.err.not.exhaustive
PrimitivePatternsSwitchErrors.java:201:16: compiler.err.not.exhaustive
PrimitivePatternsSwitchErrors.java:207:9: compiler.err.not.exhaustive.statement
- compiler.note.preview.filename: PrimitivePatternsSwitchErrors.java, DEFAULT
- compiler.note.preview.recompile
34 errors